--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body{
     background-color: rgb(00, 00, 00);
     color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1{
     font-weight: bold;
     text-align: center;
     color: rgb(00, 170, 255);
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .title-pic{
@@ -25,6 +27,7 @@ h1{
     font-family: sans-serif;
     position: fixed;
     padding: 10px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 ul li{
@@ -46,6 +49,7 @@ h2{
     font-weight: bold;
     color: rgb(255, 255, 00);
     text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .description, .ingredients{
